--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+
+    <!-- <router-view></router-view> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
     
